update ride service
