# src/main/java/com/capstone/galapagosUber/domain/entity/Ride.java
@@ -44,6 +44,8 @@ public class Ride {
 
     private Double fare;
 
+    private Double distance;
+
     @Enumerated(EnumType.STRING)
     private RideStatus status;
 
